<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".ui.activity.payment.PaymentActivity">

<!--   <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        app:popupTheme="@style/AppTheme.PopupOverlay"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llCardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clanpro_medium"
                android:padding="16dp"
                android:text="@string/card_payment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_18" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cards_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/add_card_for_payments"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCashContainer"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clanpro_medium"
                android:padding="16dp"
                android:text="@string/other_payment"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_18" />

            <TextView
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_money"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/by_cash"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/paypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_paypal"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/paypal"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_14"
                android:visibility="gone" />

            <TextView
                android:id="@+id/corporate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_card"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@string/by_corperate"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_14"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>